--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,6 +22,36 @@ main{
    color: #0f0f0f;
    padding: 10px 5px;
 }
+.left-panel ul{
+   padding-left: .75rem;
+   padding-top: .75rem;
+}
+.left-panel li{
+   list-style: none;
+   margin-bottom: 5px;
+}
+.left-panel li a{
+   text-decoration: none;
+   font-size: 1rem;
+}
+/*bs multiselect*/
+.custom-control-label {
+   margin-left: 5px;
+}
+.dashboardcode-bsmultiselect ul.form-control li.badge span{
+   color: #0f0f0f;
+   font-weight: 500;
+   font-size: .8rem;
+}
+.dashboardcode-bsmultiselect ul.form-control li.badge button.close{
+   background: none;
+   border: none;
+   position: relative;
+   bottom: 5px;
+}
+.dashboardcode-bsmultiselect ul.form-control li.badge button.close:hover{
+   font-weight: 600;
+}
 @charset "UTF-8"; /*!
  * Bootstrap  v5.2.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -10843,3 +10873,202 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.dashboardcode-bsmultiselect ul.form-control {
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+  min-height: calc(1.5em + 0.75rem + 2px);
+  margin-bottom: 0;
+  cursor: text;
+  list-style-type: none;
+}
+
+.dashboardcode-bsmultiselect ul.form-control input {
+  height: auto;
+  padding: 0;
+  margin: 0;
+  font-weight: inherit;
+  color: inherit;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  box-shadow: none;
+}
+
+.dashboardcode-bsmultiselect ul.form-control.disabled {
+  background-color: #e9ecef;
+}
+
+.dashboardcode-bsmultiselect ul.form-control::-moz-placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
+
+.dashboardcode-bsmultiselect ul.form-control::placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
+
+.dashboardcode-bsmultiselect ul.form-control > li.badge {
+  padding-left: 0;
+  -webkit-padding-start: 0;
+  padding-inline-start: 0;
+  -webkit-padding-end: 0.5rem;
+  padding-inline-end: 0.5rem;
+  padding-top: 0.35em;
+  padding-bottom: 0.35em;
+  line-height: 1.5em;
+}
+
+.dashboardcode-bsmultiselect ul.form-control > li.badge button.close {
+  float: none;
+  font-size: 1.8em;
+  line-height: 0.5em;
+  font-weight: 400;
+}
+
+.dashboardcode-bsmultiselect ul.form-control > li.badge span.disabled {
+  opacity: 0.65;
+}
+
+.dashboardcode-bsmultiselect ul.form-control.focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.dashboardcode-bsmultiselect ul.form-control.form-control-sm {
+  min-height: calc(1.5em + 0.5rem + 2px);
+}
+
+.dashboardcode-bsmultiselect ul.form-control.form-control-sm input {
+  font-size: 0.875rem;
+}
+
+.dashboardcode-bsmultiselect ul.form-control.form-control-lg {
+  min-height: calc(1.5em + 1rem + 2px);
+}
+
+.dashboardcode-bsmultiselect ul.form-control.form-control-lg input {
+  font-size: 1.25rem;
+}
+
+.dashboardcode-bsmultiselect ul.form-control.is-valid, .was-validated .dashboardcode-bsmultiselect ul.form-control:valid {
+  border-color: #28a745;
+}
+
+.dashboardcode-bsmultiselect ul.form-control.is-valid.focus, .was-validated .dashboardcode-bsmultiselect ul.form-control:valid.focus {
+  border-color: #28a745;
+  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
+}
+
+.dashboardcode-bsmultiselect ul.form-control.is-invalid, .was-validated .dashboardcode-bsmultiselect ul.form-control:invalid {
+  border-color: #dc3545;
+}
+
+.dashboardcode-bsmultiselect ul.form-control.is-invalid.focus, .was-validated .dashboardcode-bsmultiselect ul.form-control:invalid.focus {
+  border-color: #dc3545;
+  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu {
+  list-style-type: none;
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul {
+  padding-left: 0;
+  padding-right: 0;
+  margin-bottom: 0;
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul > li {
+  display: block;
+  width: 100%;
+  padding: 0 0.5rem;
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul > li .custom-control {
+  justify-content: flex-start;
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul > li .custom-control .custom-control-input, .dashboardcode-bsmultiselect div.dropdown-menu > ul > li .custom-control .custom-control-label {
+  cursor: inherit;
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul > li.disabled .custom-control-label {
+  color: #6c757d;
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul > li.hover {
+  color: var(--primary);
+  background-color: #e9ecef;
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul > li.hover:not(.disabled) {
+  color: var(--primary);
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu > ul > li.hover.selected {
+  color: var(--primary);
+}
+
+.dashboardcode-bsmultiselect div.dropdown-menu + div.alert-warning {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  z-index: 4;
+  font-size: small;
+}
+
+.dashboardcode-bsmultiselect.input-group.input-group-sm ul.form-control {
+  min-height: calc(1.5em + 0.5rem + 2px);
+}
+
+.dashboardcode-bsmultiselect.input-group.input-group-sm ul.form-control input {
+  font-size: 0.875rem;
+}
+
+.dashboardcode-bsmultiselect.input-group.input-group-lg ul.form-control {
+  min-height: calc(1.5em + 1rem + 2px);
+}
+
+.dashboardcode-bsmultiselect.input-group.input-group-lg ul.form-control input {
+  font-size: 1.25rem;
+}
+
+.was-validated .dashboardcode-bsmultiselect div.dropdown-menu > ul > li .custom-control-input:valid:checked ~ .custom-control-label {
+  color: #212529;
+}
+
+.was-validated .dashboardcode-bsmultiselect div.dropdown-menu > ul > li .custom-control-input:valid:not(:checked) ~ .custom-control-label {
+  color: #212529;
+}
+
+.was-validated .dashboardcode-bsmultiselect div.dropdown-menu > ul > li.hover .custom-control-input:valid:checked ~ .custom-control-label {
+  color: var(--primary);
+}
+
+.was-validated .dashboardcode-bsmultiselect div.dropdown-menu > ul > li.hover .custom-control-input:valid:not(:checked) ~ .custom-control-label {
+  color: var(--primary);
+}
+
+.was-validated .dashboardcode-bsmultiselect div.dropdown-menu > ul > li .custom-control-input:valid:checked ~ .custom-control-label::before {
+  color: #fff;
+  border-color: #007bff;
+  background-color: #007bff;
+}
+
+.was-validated .dashboardcode-bsmultiselect div.dropdown-menu > ul > li .custom-control-input:valid:not(:checked) ~ .custom-control-label::before {
+  border: #adb5bd solid 1px;
+}
+
+/*# sourceMappingURL=BsMultiSelect.bs4.min.css.map */
