--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,3 +21,33 @@ main{
    color: #0f0f0f;
    padding: 10px 5px;
 }
+.left-panel ul{
+   padding-left: .75rem;
+   padding-top: .75rem;
+}
+.left-panel li{
+   list-style: none;
+   margin-bottom: 5px;
+}
+.left-panel li a{
+   text-decoration: none;
+   font-size: 1rem;
+}
+/*bs multiselect*/
+.custom-control-label {
+   margin-left: 5px;
+}
+.dashboardcode-bsmultiselect ul.form-control li.badge span{
+   color: #0f0f0f;
+   font-weight: 500;
+   font-size: .8rem;
+}
+.dashboardcode-bsmultiselect ul.form-control li.badge button.close{
+   background: none;
+   border: none;
+   position: relative;
+   bottom: 5px;
+}
+.dashboardcode-bsmultiselect ul.form-control li.badge button.close:hover{
+   font-weight: 600;
+}
